Logica y State