@@ -26,91 +26,114 @@ public class AStarCatMovement extends CatMovementStrategy<HexPosition> {
     
     @Override
     protected List<HexPosition> getPossibleMoves(HexPosition currentPosition) {
-        // TODO: Obtener movimientos válidos desde la posición actual
-        // Usar board.getAdjacentPositions() y filtrar posiciones válidas
-        // No incluir posiciones bloqueadas
-        // 
-        // Pista: Usar streams para filtrar
-        // return board.getAdjacentPositions(currentPosition).stream()
-        //     .filter(pos -> !board.isBlocked(pos))
-        //     .collect(Collectors.toList());
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // Obtener posiciones adyacentes que no estén bloqueadas
+        return board.getAdjacentPositions(currentPosition).stream()
+                .filter(pos -> !board.isBlocked(pos))
+                .toList();
     }
-    
+
     @Override
-    protected Optional<HexPosition> selectBestMove(List<HexPosition> possibleMoves, 
-                                                  HexPosition currentPosition, 
+    protected Optional<HexPosition> selectBestMove(List<HexPosition> possibleMoves,
+                                                  HexPosition currentPosition,
                                                   HexPosition targetPosition) {
-        // TODO: Implementar selección del mejor movimiento usando A*
-        // Calcular f(n) = g(n) + h(n) para cada movimiento posible
-        // g(n) = costo desde inicio hasta n
-        // h(n) = heurística desde n hasta objetivo
-        // Retornar el movimiento con menor f(n)
-        // 
-        // Pista: Usar Function para calcular costos y comparar
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // Selecciona el movimiento cuyo camino A* al objetivo sea más corto
+        double minCost = Double.POSITIVE_INFINITY;
+        HexPosition bestMove = null;
+        for (HexPosition move : possibleMoves) {
+            List<HexPosition> path = getFullPath(move, targetPosition);
+            if (!path.isEmpty() && path.size() < minCost) {
+                minCost = path.size();
+                bestMove = move;
+            }
+        }
+        return Optional.ofNullable(bestMove);
     }
-    
+
     @Override
     protected Function<HexPosition, Double> getHeuristicFunction(HexPosition targetPosition) {
-        // TODO: Implementar función heurística
-        // Para tablero hexagonal, usar distancia hexagonal
-        // La heurística debe ser admisible (nunca sobreestimar el costo real)
-        // 
-        // Ejemplo:
-        // return position -> position.distanceTo(targetPosition);
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // Distancia hexagonal (admisible)
+        return position -> position.distanceTo(targetPosition);
     }
-    
+
     @Override
     protected Predicate<HexPosition> getGoalPredicate() {
-        // TODO: Definir qué posiciones son objetivos válidos
-        // Para "atrapar al gato", el objetivo son las posiciones del borde
-        // 
-        // Pista: Una posición está en el borde si está en el límite del tablero
-        // return position -> Math.abs(position.getQ()) == board.getSize() ||
-        //                   Math.abs(position.getR()) == board.getSize() ||
-        //                   Math.abs(position.getS()) == board.getSize();
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // El objetivo es llegar al borde del tablero
+        return position -> {
+            int boardSize = board.getSize();
+            return Math.abs(position.getQ()) == boardSize ||
+                   Math.abs(position.getR()) == boardSize ||
+                   Math.abs(position.getS()) == boardSize;
+        };
     }
-    
+
     @Override
     protected double getMoveCost(HexPosition from, HexPosition to) {
-        // TODO: Calcular costo de moverse entre dos posiciones
-        // Para tablero hexagonal, normalmente es 1.0 para posiciones adyacentes
-        // Puede variar según reglas específicas del juego
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // Costo uniforme para movimientos adyacentes
+        return 1.0;
     }
-    
+
     @Override
     public boolean hasPathToGoal(HexPosition currentPosition) {
-        // TODO: Verificar si existe camino desde posición actual hasta cualquier objetivo
-        // Usar BFS o A* para explorar hasta encontrar una posición objetivo
-        // Retornar true si se encuentra camino, false si no
-        // 
-        // Pista: Usar getGoalPredicate() para identificar objetivos
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // BFS simple para verificar si hay camino al borde
+        Set<HexPosition> visited = new HashSet<>();
+        Queue<HexPosition> queue = new LinkedList<>();
+        queue.offer(currentPosition);
+        visited.add(currentPosition);
+
+        Predicate<HexPosition> goalPredicate = getGoalPredicate();
+
+        while (!queue.isEmpty()) {
+            HexPosition current = queue.poll();
+            if (goalPredicate.test(current)) {
+                return true;
+            }
+            for (HexPosition neighbor : board.getAdjacentPositions(current)) {
+                if (!visited.contains(neighbor) && !board.isBlocked(neighbor)) {
+                    visited.add(neighbor);
+                    queue.offer(neighbor);
+                }
+            }
+        }
+        return false;
     }
-    
+
     @Override
     public List<HexPosition> getFullPath(HexPosition currentPosition, HexPosition targetPosition) {
-        // TODO: Implementar A* completo para obtener el camino completo
-        // Usar PriorityQueue para nodos a explorar
-        // Mantener Map de padres para reconstruir el camino
-        // Retornar lista de posiciones desde inicio hasta objetivo
-        // 
-        // Estructura sugerida:
-        // 1. Inicializar estructuras de datos (openSet, closedSet, gScore, fScore, cameFrom)
-        // 2. Agregar posición inicial a openSet
-        // 3. Mientras openSet no esté vacío:
-        //    a. Tomar nodo con menor fScore
-        //    b. Si es objetivo, reconstruir y retornar camino
-        //    c. Mover a closedSet
-        //    d. Para cada vecino válido, calcular scores y actualizar
-        // 4. Si no se encuentra camino, retornar lista vacía
-        throw new UnsupportedOperationException("Los estudiantes deben implementar este método");
+        // Implementación básica de A*
+        Predicate<HexPosition> goalPredicate = getGoalPredicate();
+        Function<HexPosition, Double> heuristic = getHeuristicFunction(targetPosition);
+
+        PriorityQueue<AStarNode> openSet = new PriorityQueue<>(Comparator.comparingDouble(n -> n.fScore));
+        Map<HexPosition, Double> gScore = new HashMap<>();
+        Set<HexPosition> closedSet = new HashSet<>();
+
+        AStarNode startNode = new AStarNode(currentPosition, 0.0, heuristic.apply(currentPosition), null);
+        openSet.add(startNode);
+        gScore.put(currentPosition, 0.0);
+
+        while (!openSet.isEmpty()) {
+            AStarNode current = openSet.poll();
+
+            if (goalPredicate.test(current.position) || current.position.equals(targetPosition)) {
+                return reconstructPath(current);
+            }
+
+            closedSet.add(current.position);
+
+            for (HexPosition neighbor : board.getAdjacentPositions(current.position)) {
+                if (board.isBlocked(neighbor) || closedSet.contains(neighbor)) continue;
+
+                double tentativeG = current.gScore + getMoveCost(current.position, neighbor);
+                if (tentativeG < gScore.getOrDefault(neighbor, Double.POSITIVE_INFINITY)) {
+                    gScore.put(neighbor, tentativeG);
+                    double fScore = tentativeG + heuristic.apply(neighbor);
+                    openSet.add(new AStarNode(neighbor, tentativeG, fScore, current));
+                }
+            }
+        }
+        return Collections.emptyList();
     }
-    
+
     // Clase auxiliar para nodos del algoritmo A*
     private static class AStarNode {
         public final HexPosition position;
@@ -128,10 +151,14 @@ public class AStarCatMovement extends CatMovementStrategy<HexPosition> {
     
     // Método auxiliar para reconstruir el camino
     private List<HexPosition> reconstructPath(AStarNode goalNode) {
-        // TODO: Reconstruir camino desde nodo objetivo hasta inicio
-        // Seguir la cadena de padres hasta llegar al inicio
-        // Retornar lista en orden correcto (desde inicio hasta objetivo)
-        throw new UnsupportedOperationException("Método auxiliar para implementar");
+        List<HexPosition> path = new ArrayList<>();
+        AStarNode current = goalNode;
+        while (current != null) {
+            path.add(current.position);
+            current = current.parent;
+        }
+        Collections.reverse(path);
+        return path;
     }
     
     // Hook methods - los estudiantes pueden override para debugging
@@ -146,4 +173,4 @@ public class AStarCatMovement extends CatMovementStrategy<HexPosition> {
         // TODO: Opcional - logging, métricas, etc.
         super.afterMovementCalculation(selectedMove);
     }
-} 
+}
